--- a/TSeriesMMA/DESCRIPTION
+++ b/TSeriesMMA/DESCRIPTION
@@ -1,9 +1,17 @@
 Package: TSeriesMMA
 Title: Multiscale Multifractal Analysis of Time Series Data
 Version: 0.1.0
-Authors@R: c(person("Vishakh", "Padmakumar", email = "vishakhpadmakumar@gmail.com", role = c("aut", "cre")), person("Rishab", "Ranga", email = "rishab.ranga1996@gmail.com", role = c("aut")), person("Amogha", "Udupa", email = "amogha15@gmail.com", role = c("aut")), person("Param", "Hanji", email = "param.catchchaos@gmail.com", role = c("aut"))) 
-Description: Multiscale multifractal analysis (MMA) (Gierałtowski et al., 2012)<DOI: 10.1103/PhysRevE.85.021915> is a time series analysis method, designed to describe scaling properties of fluctuations within the signal analyzed. The main result of this procedure is the so called Hurst surface h(q,s) , which is a dependence of the local Hurst exponent h (fluctuation scaling exponent) on the multifractal parameter q  and the scale of observation s (data window width). 
-Depends: R (>= 3.0.2)
+Authors@R: c(person("Vishakh", "Padmakumar", email = "vishakhpadmakumar@gmail.com", role = c("aut", "cre")), person("Rishab", "Ranga", email = "rishab.ranga1996@gmail.com", role = c("aut")), person("Amogha", "Udupa", email = "amogha15@gmail.com", role = c("aut")), person("Param", "Hanji", email = "param.catchchaos@gmail.com", role = c("aut")))
+Description: Multiscale multifractal analysis (MMA) (Gierałtowski et al.,
+    2012)<DOI: 10.1103/PhysRevE.85.021915> is a time series analysis method,
+    designed to describe scaling properties of fluctuations within the signal
+    analyzed. The main result of this procedure is the so called Hurst surface
+    h(q,s) , which is a dependence of the local Hurst exponent h (fluctuation
+    scaling exponent) on the multifractal parameter q and the scale of observation s
+    (data window width).
+Depends:
+    R (>= 3.0.2)
 License: GPL (>=2)
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 5.0.1
